Fixed White Space issue on all parts and added varied dialogue

--- a/project0/style.css
+++ b/project0/style.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-flow: column;
   height: 100%;
+  margin: 0;
 }
 
 .box .row.header {
@@ -17,10 +18,12 @@ body {
   flex-shrink: 1,
   flex-basis: auto
   */
+  margin: 0;
 }
 
 .box .row.content {
   flex: 1 1 auto;
+  margin: 0;
 }
 
 .box .row.footer {
@@ -29,16 +32,14 @@ body {
 
 h1 {
     margin: 0;
-    padding: 5px;
+    padding: 12px;
     text-align: center;
 }
 
-#palpatine {
+.palpatine {
     background-color: #913b7e;
-}
-
-#anakin {
-    background-color: orangered;
+    border-top: solid 1px black;
+    border-collapse: collapse;
 }
 
 #background-image {
